@@ -1,4 +1,4 @@
-.TH VIFM 1 "December 13, 2015" "vifm 0.8"
+.TH VIFM 1 "December 17, 2015" "vifm 0.8"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3571,6 +3571,7 @@ etc.):
    [+\-]perms   \- permissions string (*nix only)
    [+\-]uid     \- owner id (*nix only)
    [+\-]uname   \- owner name (*nix only)
+   [+\-]nlinks  \- number of hard links (*nix only)
    [+\-]size    \- size
    [+\-]nitems  \- number of items in a directory (zero for files)
    [+\-]groups  \- groups extracted via regexps from 'sortgroups'
